--- a/templates/card.html
+++ b/templates/card.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 
-  <a class="card__link" href="/overview/id/{id}">
+  <a class="card__link" href="/overview/?id={id}">
     <span>Detail <i class="emoji-right">👉</i></span>
   </a>
 </figure>
